Replace the unmaintained "atty" crate with "is-terminal"
The "atty" crate is unmaintained [0] and also causes a low severity
GitHub advisory (GHSA-g98v-hv3f-hcfr; only affects windows though) [1]:
> A Pull Request with a fix has been provided over a year ago but the
> maintainer seems to be unreachable.
> Last release of atty was almost 3 years ago.

The "clap" crate already switched to "is-terminal" [2] so we can simply
use the latter without having to pull in additional dependencies.
The "is-terminal" crate can also be considered a successor [3]:
> This crate is derived from the atty crate with PR 51 bug fix and PR 54
> port to windows-sys applied.

[0]: https://github.com/softprops/atty/issues/57
[1]: https://github.com/science-computing/butido/security/dependabot/9
[2]: https://github.com/clap-rs/clap/pull/4249
[3]: https://crates.io/crates/is-terminal

Signed-off-by: Michael Weiss <michael.weiss@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ maintenance = { status = "passively-maintained" }
 anyhow         = "1"
 aquamarine     = "0.3"
 ascii_table    = "4"
-atty           = "0.2"
 bytesize       = "1"
 chrono         = "0.4"
 clap           = { version = "4", features = ["cargo"] }
@@ -48,6 +47,7 @@ human-panic    = "1"
 humantime      = "2"
 indicatif      = "0.17"
 indoc          = "2"
+is-terminal    = "0.4"
 itertools      = "0.11"
 lazy_static    = "1"
 log            = "0.4"
