Let cargo-deny ignore that the yaml-rust crate is unmaintained
This isn't a security issue yet, the `syntect` crate should get rid of
it eventually, and this isn't really actionable for us so let's ignore
that informative advisory so that CI remains green (it's an optional CI
check but the failure could mask real vulnerabilities and does also mark
the CI run with a red cross on the GitHub UI).

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/deny.toml
+++ b/deny.toml
@@ -59,4 +59,9 @@ skip-tree = [
 
 [advisories]
 ignore = [
+    # Ignore an "INFO Unmaintained" advisory for the yaml-rust crate that the
+    # "syntect" crate uses. This can be removed once
+    # https://github.com/trishume/syntect/issues/537 is resolved (replace
+    # yaml-rust with yaml-rust2):
+    { id = "RUSTSEC-2024-0320", reason = "Only an informative advisory that the crate is unmaintained and the maintainer unreachable" },
 ]
