Let cargo-deny ignore that the proc-macro-error crate is unmaintained
This isn't a security issue yet, the `aquamarine` crate should get rid
of it eventually, and this isn't really actionable for us so let's
ignore that informative advisory so that CI remains green (it's an
optional CI check but the failure could mask real vulnerabilities and
does also mark the CI run with a red cross on the GitHub UI).

https://rustsec.org/advisories/RUSTSEC-2024-0370:
> proc-macro-error's maintainer seems to be unreachable, with no commits
> for 2 years, no releases pushed for 4 years, and no activity on the
> GitLab repo or response to email.
> proc-macro-error also depends on syn 1.x, which may be bringing
> duplicate dependencies into dependant build trees.

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/deny.toml
+++ b/deny.toml
@@ -64,4 +64,9 @@ ignore = [
     # https://github.com/trishume/syntect/issues/537 is resolved (replace
     # yaml-rust with yaml-rust2):
     { id = "RUSTSEC-2024-0320", reason = "Only an informative advisory that the crate is unmaintained and the maintainer unreachable" },
+    # Ignore an "INFO Unmaintained" advisory for the proc-macro-error crate
+    # that the "aquamarine" crate uses. This can be removed once
+    # https://github.com/mersinvald/aquamarine/issues/45 is resolved (Move away
+    # from proc-macro-error):
+    { id = "RUSTSEC-2024-0370", reason = "Only an informative advisory that the crate is unmaintained and the maintainer unreachable" },
 ]
