--- a/deny.toml
+++ b/deny.toml
@@ -65,4 +65,9 @@ ignore = [
     # https://github.com/trishume/syntect/issues/537 is resolved (replace
     # yaml-rust with yaml-rust2):
     { id = "RUSTSEC-2024-0320", reason = "Only an informative advisory that the crate is unmaintained and the maintainer unreachable" },
+    # Ignore an "INFO Unmaintained" advisory for the `bincode` crate
+    # that the `syntect` crate uses. This can be removed once
+    # https://github.com/trishume/syntect/issues/606 is resolved
+    # ("Replacement for bincode as a dep?"):
+    { id = "RUSTSEC-2025-0141", reason = "Only an informative advisory that the crate is unmaintained but the team considers version 1.3.3 a complete version that is not in need of any updates." },
 ]
